--- a/Testing_v1.ini
+++ b/Testing_v1.ini
@@ -1,8 +1,8 @@
 [custom]
-ruleset=🌐总代理,https://raw.githubusercontent.com/ruleset/rules/global.list
-ruleset=🎮Steam,rules/steam.list
-ruleset=🇭🇰香港路线,rules/hk.list
-ruleset=🧩微软服务,rule/microsoft.list
+ruleset=🌐总代理,https://raw.githubusercontent.com/P0ch1P/ruleset/main/rules/global.list
+ruleset=🎮Steam,https://raw.githubusercontent.com/P0ch1P/ruleset/main/rules/steam.list
+ruleset=🇭🇰香港路线,https://raw.githubusercontent.com/P0ch1P/ruleset/main/rules/hk.list
+ruleset=🧩微软服务,https://raw.githubusercontent.com/P0ch1P/ruleset/main/rules/microsoft.list
 ruleset=🐟漏网之鱼,[]MATCH
 
 custom_proxy_group=🌐总代理`select`.*
